<resources>
    <string name="app_name">SerFee</string>
    <string name="input_pass">Input Your Password</string>
    <string name="pass_length">Password must be at least 8 characters</string>
    <string name="invalid_email">Invalid Format</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="input_email">Input Your Email</string>
    <string name="check_input">Check Your Input</string>
    <string name="login">Login</string>
    <string name="name_required">Name is required</string>
    <string name="name">Name</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="preview">Preview</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_story">Add Story</string>
    <string name="upload">Upload</string>
    <string name="logout">Log Out</string>
    <string name="image">gambar</string>
    <string name="created_at">Uploaded at %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="input_image_first">Input Your Image First!</string>
    <string name="didnt_get_permission">Didn\'t get permission</string>
    <string name="setting">Language</string>
    <string name="story_from">Story from : </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="retry">Retry</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="maps">Maps Story</string>
    <string name="f">F</string>
    <string name="date">21 Juni 2022</string>
    <string name="image_description">Picture of %1$s</string>
    <string name="detail_story">Detail Story</string>
    <string name="menu_home">Home</string>
    <string name="menu_maps">Map</string>
    <string name="menu_add_story">Add Task</string>
    <string name="custom_spinner">Select Categories</string>
    <string name="user_name">Akha MB</string>
    <string name="welcome">Welcome!</string>
    <string name="find_task">Lets find your task</string>
    <string name="house_cleaning">House cleaning</string>
    <string name="nearby_tasks">Nearby tasks</string>
    <string name="_2_meters">2 meters</string>


</resources>