<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.story.AddStoryActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.story.AddStoryActivity"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                app:cardCornerRadius="16dp"
                android:layout_width="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <ImageView
                    android:id="@+id/preview_image"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_place_holder"
                    android:adjustViewBounds="true"
                    />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"

                android:text="@string/camera"
                app:cornerRadius="32dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
                app:layout_constraintTop_toBottomOf="@+id/card_view"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gallery"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/gallery"


                app:cornerRadius="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_camera"
                app:layout_constraintStart_toEndOf="@+id/btn_camera"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_description"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="50dp"
                android:hint="@string/description"
                android:layout_marginEnd="50dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera"
                app:layout_constraintStart_toStartOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_desc"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--   Add Android Custom Spinner Here     -->
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="16dp"
               android:hint="@string/custom_spinner"
               tools:ignore="MissingConstraints"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               >
               <AutoCompleteTextView
               android:id="@+id/dropdown_menu"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="none" >

           </AutoCompleteTextView>

           </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:hint="@string/location"
                android:layout_marginEnd="50dp"
                app:boxCornerRadiusBottomEnd="16dp"
                android:enabled="false"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:layout_constraintStart_toStartOf="@+id/il_description"
                app:layout_constraintEnd_toEndOf="@+id/il_description"
                app:layout_constraintTop_toBottomOf="@+id/il_description"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ic_search_location"
                android:layout_height="40dp"
                android:layout_width="40dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/il_location"
                android:src="@drawable/ic_baseline_add_location_24"
                app:layout_constraintTop_toTopOf="@+id/il_location"
                app:layout_constraintStart_toEndOf="@+id/il_location"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_upload"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="24dp"
                android:text="@string/upload"
                app:cornerRadius="16dp"
                app:layout_constraintStart_toStartOf="@+id/il_location"
                app:layout_constraintEnd_toEndOf="@+id/il_location"
                app:layout_constraintTop_toBottomOf="@+id/il_location"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading3.json"
        />


</androidx.constraintlayout.widget.ConstraintLayout>