<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/rounded_toolbar_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/custom_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aguafina_script"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorPressed="@color/purple_500"
            android:layout_marginStart="300dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/power"
            app:fab_colorNormal="#EEEEEE"
            fab:fab_label="@string/logout"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_setting"
            android:layout_width="wrap_content"
            app:fab_colorNormal="#EEEEEE"
            android:layout_marginStart="300dp"
            app:fab_colorPressed="@color/purple_500"
            android:layout_marginTop="75dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_settings_24"
            fab:fab_label="@string/setting"
            fab:fab_size="mini"
            />
        <ImageButton
            android:id="@+id/btn_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/person"
            android:background="@drawable/button_background"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="Button Description"
        />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp"
            android:layout_marginStart="80dp"
            android:textColor="@color/black"
            android:text="Akha MB"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="23sp" />


        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="81dp"
            android:layout_marginStart="20dp"
            android:text="@string/welcome"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="21sp" />
        <TextView
            android:id="@+id/text_letsfind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="110dp"
            android:layout_marginStart="20dp"
            android:text="@string/find_task"
            android:gravity="start"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnCleaning"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@id/btnGardening"
            android:layout_marginBottom="24dp"
            android:text="Cleaning"
            android:elevation="6dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnGardening"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/purple_500"
            android:textColor="#FFFFFF"
            android:text="Gardening"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:elevation="6dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnFixing"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/purple_500"
            android:textColor="#FFFFFF"
            android:text="Fixing"
            android:elevation="6dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <!-- Dont change anything under this-->

    <TextView
        android:id="@+id/text_nearby"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="340dp"
        android:layout_marginStart="8dp"
        android:text="@string/nearby_tasks"
        android:gravity="start"
        android:textStyle="bold"
        android:textSize="21sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/title_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="390dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sapu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvMovie"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/house_cleaning"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="390dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sinopsis"
        android:layout_width="280dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovie"
        android:text="@string/_2_meters"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="391dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_image"
        android:background="@color/underline"
        />


<!--    2-->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/title_imagee"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="480dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sapu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvMoviee"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/house_cleaning"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="480dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_imagee"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sinopsiss"
        android:layout_width="280dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMoviee"
        android:text="@string/_2_meters"
        tools:ignore="MissingConstraints"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_imagee"
        android:background="@color/underline"
        />

<!--    3-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/title_imageee"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="570dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sapu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvMovieee"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:text="@string/house_cleaning"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="570dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/title_imageee"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sinopsisss"
        android:layout_width="280dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieee"
        android:text="@string/_2_meters"
        tools:ignore="MissingConstraints"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_imageee"
        android:background="@color/underline"
        />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/purple_200"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading3.json"
        app:lottie_loop="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>